# autotune

./: .coveragerc  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Dockerfile  LICENSE  README.md  api_doc.md  docker-compose.yml  main.py  manage.py  mock.py  pyproject.toml  pytest.ini  requirements.txt  sample.env  worker.py
.github/workflows/: build-and-push.yml  test.yaml
01old/: Dockerfile  README.md  docker-compose.yml  main.py  worker.py
01old/docs/: entitites.md  readme.md  workflow-api.md
01old/docs/requests/: get.workflow.md  get.workflow.status.md  put.workflow.md
01old/models/: train.py
01old/tasks/: __init__.py  train.py
01old/tests/e2e/: parser.py
01old/tests/unit/: test_data_fetcher.py  test_parser.py
01old/utils/: data.py
apis/: entitites.md  readme.md  workflow-api.md
apis/curls/: get.workflow.sh  get.workflow.status.sh  post.workflow.generate.id.sh  post.workflow.iterate.id.sh  put.dataset.id.sh  put.workflow.sh
apis/mocks/: get.workflow.json  get.workflow.status.json  post.workflow.generate.id.json  post.workflow.iterate.id.json  put.dataset.id.json  put.workflow.json
autotune/: asgi.py  celery.py  redis.py  settings.py  urls.py  wsgi.py
docs/: AUTOTUNE.md
docs/API v2/: GET status.md  GET workflow.md  POST data.md  POST generate.md  POST iterate.md  POST workflow.md
docs/Entities/: config.md  example.md  workflow.md
models/: data.py  train.py
old/: .pylintrc  mock.py
old/docs/requests/: get.task.md  post.workflow.generate.id.md  post.workflow.iterate.id.md  put.dataset.id.md
old/models/: __init__.py  data.py
old/tasks/: data.py  data_fetcher.py  questions.py  train.py
old/tests/e2e/: hf_repo.py  simple_label.py  train.py  utils.py
old/tests/unit/: data_fetcher.py  fixtures.py
old/utils/: tasks.py
server/: settings.py
tasks/: data.py  data_fetcher.py  questions.py  train.py
tests/: parser.py  prompt.py  simple_label.py  utils.py
tests/e2e/: hf_repo.py  parser.py  simple_label.py  utils.py
tests/unit/: test_data_fetcher.py  test_parser.py
utils/: __init__.py  data.py  tasks.py  train.py  upload.py
workflow/: .env.sample  align_tasks.py  apps.py  celery_task.py  dataFetcher.py  dataset.py  generate.py  health.py  mixins.py  models.py  pydantic_models.py  qapair_config.yaml  serializers.py  signals.py  task.py  tasks.py  test.json  test.py  train.py  urls.py  utils.py  views.py
workflow/force_alignment/: alignment.py  asr_model.py  audio.py  utils.py
workflow/generator/: dataFetcher.py  generate.py  generator_model.py
workflow/management/commands/: database.py
workflow/migrations/: 0001_initial.py  0002_alter_workflows_dataset_alter_workflows_model.py  0003_alter_examples_workflow.py  0004_task_dataset_task_parent_task_task_temp_data.py  0005_task_total_number.py  0006_alter_examples_text.py  0007_remove_task_total_number_alter_task_workflow.py  0008_examples_task_id.py  0009_remove_task_parent_task_remove_task_temp_data_and_more.py  0010_task_generated_samples_task_total_samples.py  0011_remove_workflows_workflow_type_and_more.py  0012_alter_workflowconfig_name.py  0013_remove_workflowconfig_json_schema_and_more.py  0014_examples_prompt_workflows_estimated_dataset_cost_and_more.py  0015_remove_workflowconfig_parameters_and_more.py  0016_user_is_active.py  0017_remove_prompt_user_prompt_system_prompt_and_more.py  0018_alter_workflows_cost_and_more.py  0019_remove_workflows_dataset_dataset_workflow_and_more.py  0020_alter_dataset_latest_commit_hash.py  0021_user_role_alter_user_huggingface_user_id_and_more.py  0022_trainingmetadata.py  0023_dataset_type_workflows_type_and_more.py  0023_datasetcreationtask.py  0024_mlmodel_label_studio_comp_and_more.py  0025_datasetdata_file.py  0026_alter_workflows_llm_model_alter_workflows_split_and_more.py  0027_mlmodelconfig_alter_workflows_llm_model.py  0028_mlmodel_config.py  0029_mlmodel_deployed_at.py  0030_remove_trainingmetadata_user_mlmodel_user.py  0031_remove_mlmodel_label_studio_comp_and_more.py  0032_rename_uploaded_at_mlmodel_last_trained.py  0033_mlmodel_task.py  0034_datasetdata_record_id_datasetdata_user.py
workflow/tests/unit/: test_dataFetcher.py
workflow/training/: __init__.py  classification.py  colbert.py  deploy.py  embedding_finetuning.py  ner.py  onnx.py  onnx_conversion.py  quantize.py  quantize_model.py  tasks.py  train.py  utils.py  whisper.py
workflowV2/: apps.py  mixins.py  serializers.py  urls.py  utils.py  views.py
workflows/: apps.py  models.py
