[tool.poetry]
name = "autotune"
version = "0.1.0"
description = "A comprehensive toolkit for seamless data generation and fine-tuning of NLP models, all conveniently packed into a single block."
authors = ["chakshu,sooraj"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
transformers = "^4.31.0"
pandas = "^2.0.3"
aioredis = {extras = ["hiredis"], version = "^2.0.1"}
aiohttp = "^3.8.5"
datasets = "^2.13.1"
accelerate = "^0.21.0"
celery = {extras = ["redis"], version = "^5.3.1"}
evaluate = "^0.4.0"
rouge-score = "^0.1.2"
scikit-learn = "^1.3.0"
optimum = {extras = ["exporters"], version = "^1.10.1"}
python-dotenv = "^1.0.0"
llama-index = "^0.8.66"
langchain = "^0.1.0"
dirtyjson = "^1.0.8"
coloredlogs = "^15.0.1"
pytest = "^7.4.3"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
pytest-asyncio = "^0.21.1"
pytest-testmon = "^2.1.0"
pytest-watch = "^4.2.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
django = "^4.0.0"
psycopg = "^3.0.0"
drf_yasg = "^1.21.7"
django-redis= "^5.4.0"
jsonschema="^4.21.1"
langchain-core="^0.1.40"
langchain-openai="^0.1.0"
whitenoise="^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
