[tool.poetry]
name = "autotune"
version = "0.1.0"
description = "A comprehensive toolkit for seamless data generation and fine-tuning of NLP models, all conveniently packed into a single block."
authors = ["chakshu,sooraj"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
transformers = "^4.31.0"
pandas = "^2.2.2"
aioredis = {extras = ["hiredis"], version = "^2.0.1"}
aiohttp = "^3.8.5"
datasets = "^2.19.1"
accelerate = "^0.33.0"
celery = {extras = ["redis"], version = "^5.3.1"}
evaluate = "^0.4.0"
rouge-score = "^0.1.2"
scikit-learn = "^1.5.0"
optimum = "1.21.3"
python-dotenv = "^1.0.0"
llama-index = "^0.8.66"
langchain = "^0.1.0"
dirtyjson = "^1.0.8"
coloredlogs = "^15.0.1"
pytest = "^7.4.3"
torch = "^2.3.0"
pytest-asyncio = "^0.21.1"
pytest-testmon = "^2.1.0"
pytest-watch = "^4.2.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
django = "^4.0.0"
psycopg = "^3.0.0"
drf_yasg = "^1.21.7"
django-redis= "^5.4.0"
jsonschema="^4.21.1"
langchain-core="^0.1.40"
langchain-openai="^0.1.0"
whitenoise="^6.6.0"
psycopg_binary="^3.1.18"
gevent="^24.2.1"
dj_database_url="^1.0.3"
psycopg2-binary="^2.9.9"
datamodel-code-generator="^0.25.6"
minio="^7.2.7"
faiss-gpu = "^1.7.2"
gdown = "^5.2.0"
colbert-ai = "^0.2.19"
django-cors-headers = "^4.3.1"
django-pandas = "^0.6.7"
pygithub = "^2.3.0"
pytest-django = "^4.8.0"
jiwer = "^3.0.4"
soundfile = "^0.12.1"
librosa = "^0.10.2.post1"
bitsandbytes = "^0.43.3"
onnx = "^1.16.2"
onnxruntime = "^1.18.1"
onnxconverter-common = ">=1.14.0"
sentence-transformers = "^3.0.1"
catalogue = "^2.0.10"
faiss-cpu = "^1.8.0.post1"
fast-pytorch-kmeans = "^0.2.0.1"
pynvml = "^11.5.3"
srsly = "^2.4.8"
voyager = "^2.0.9"
typing-extensions = "^4.12.2"
huggingface-hub = "^0.24.6"
azure-cognitiveservices-speech = "^1.40.0"
textwrap3 = "^0.9.2"
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
